--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: flask-app
+name: flaskapp
 description: Helm chart para App Flask con soporte Dual DB y Gateway API
 type: application
 version: 0.1.0
