--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,9 @@
 SECRET_KEY=cambia_esta_clave_por_una_larga_y_segura
 
 # --- Base de Datos PostgreSQL ---
-POSTGRES_USER=fichador_user
-POSTGRES_PASSWORD=fichador_pass
-POSTGRES_DB=fichador_db
+POSTGRES_USER=flaskapp_user
+POSTGRES_PASSWORD=flaskapp_pass
+POSTGRES_DB=flaskapp_db
 # Host del servicio de BBDD (nombre del servicio en docker-compose)
 POSTGRES_HOST=db 
 
