--- a/helm/templates/db-service.yaml
+++ b/helm/templates/db-service.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "fichador.fullname" . }}-db
+  name: {{ include "flaskapp.fullname" . }}-db
   labels:
-    {{- include "fichador.labels" . | nindent 4 }}
+    {{- include "flaskapp.labels" . | nindent 4 }}
     app.kubernetes.io/component: database
 spec:
   type: ClusterIP
@@ -14,6 +14,6 @@ spec:
       protocol: TCP
       name: postgres
   selector:
-    {{- include "fichador.selectorLabels" . | nindent 4 }}
+    {{- include "flaskapp.selectorLabels" . | nindent 4 }}
     app.kubernetes.io/component: database
 {{- end }}
