--- a/helm/templates/sqlite-pvc.yaml
+++ b/helm/templates/sqlite-pvc.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ include "fichador.fullname" . }}-sqlite-pvc
+  name: {{ include "flaskapp.fullname" . }}-sqlite-pvc
   labels:
-    {{- include "fichador.labels" . | nindent 4 }}
+    {{- include "flaskapp.labels" . | nindent 4 }}
 spec:
   accessModes:
     - ReadWriteOnce
